# polarisopt

./: .gitignore  .nojekyll  AGENTS.md  CHANGELOG.md  FEEDBACK.md  License.txt  README.md  index.html  mkdocs.yml  pol.yml  pug-2026.html  pyproject.toml  requirements.txt  run_argo.sh  workflow_readme.md
DRGP/: README.md  morris_SA.py  run_bebop.sh  sim_build.py  workflow_readme.md
DRGP/PolarisOpt/: F.py  __init__.py  bo.py  custom_gp.py  dim_red.py  eval_sim.py  nn.py  setup_manager.py
DRGP/data/: config_5.json  config_9.json  config_mm.json  config_morris.json  config_readme.md  mm_training_data.json  settings.json  settings_bebop_emews.json  settings_bebop_nc.json  settings_nc.json  settings_readme.md
PolarisOpt/: F.py  acquisition.py  dim_red.py  eqsql_wrappers.py  eval_sim.py  manager.py  manager_old.py  morris_SA.py  nn.py  sampler.py  setup_manager.py  slurm_wrappers.py
PolarisOpt/utils/: archiver.py  fit.py  morris_analysis.py  nn_util.py  objective_funcs.py  transforms.py  util.py
convergence/: !run_convergence.bat  CSV_Utillities.py  bloomington_bebop_control.json  convergence_control.json  convergence_control_linux.json  email_list.txt  init_model.py  modify_scenario.py  regression.py  regression_control.json  run_Bloomington_convergence.sh  run_convergence.cmd  run_convergence.py  run_convergence.sh  run_convergence_abm.py  run_regression.py  scenario_abm.json  scenario_abm_init.json  scenario_abm_init_10per.json  simple_regression.py  srun_polaris.sh  thread_test.sh
convergence/client_side/: bebop_parsl.py  bebop_submit.py
data/: config_morris_constants.json  config_timedep.json  conv.py  settings.json  settings_bebop_emews.json  settings_local_emews.json  settings_readme.md  settings_slurm.json  template-argo.slurm  template-bebop.slurm  timedep_training_data.json
docs/: architecture.md  eqsql-compat.md  gen_api_pages.py  getting-started.md  index.md  llms-txt.md  llms.txt  operating-as-an-agent.md  plugins.md  restart.md  taxidemo.md  yaml-reference.md
docs/concepts/: bayesian-optimization.md  index.md  master-slave.md  multi-objective.md  plugin-registries.md  restart-correctness.md
docs/how-to/: add-design.md  common-mistakes.md  debug-failed-samples.md  index.md  migrate-from-eqsql.md  monitor-a-study.md  run-on-pbs.md  run-on-slurm.md  swap-surrogate.md  use-from-notebook.md  use-globus.md
docs/notebooks/: compare-runs.md  convergence.md  index.md  morris.md  pareto-front.md
docs/reference/: cli.md
docs/tutorials/: 01-branin-demo.md  02-morris-screening.md  03-multi-objective.md  04-restart.md  05-first-polaris.md  06-write-a-plugin.md  index.md
latin-study/: config_morris_timing.json  latin-study.pkl  latin.py  run_argo.sh  settings_slurm.json  template-argo.slurm
morris-study/: aus-mc-timing.csv  focus-parameters.json  problem.pkl  settings_slurm.json  timing_choice_distribution.csv
nb/: generate-config.ipynb  get-metrics.ipynb  getmetricsutils.py  kpi.ipynb  moe-gap-austim-timing.csv  morris-eda.ipynb  predict.ipynb  temp.csv  test-results.ipynb  thread-mock.ipynb  vmt_vht.csv
quantile-opt/: manual_search.py  settings_slurm.json  timing_choice_distribution.csv
src/polarisopt/: __init__.py  cli.py  eqsql_compat.py
studyconfig/: conv.py  settings.json  settings_bebop_emews.json  settings_local_emews.json  settings_readme.md
swift_proj/: .gitignore  README.md
swift_proj/data/: config_all.json  polaris-data  settings.json  upf.txt
swift_proj/db/: bebop_db_readme.md  env-bebop.sh  env-polaris-bebop.sh
swift_proj/doc/: Polaris emews workflow.docx  Polaris_emews_workflow.md
swift_proj/envs/: bebop_env.sh
swift_proj/model/: polaris
swift_proj/python/: check-queues.py  create_scenario_init.py  drgp.py  eval_DR_wrapper.py  eval_wrapper.py  run_drgp.py
swift_proj/scripts/: bebop_submit_drgp.sh  eval.sh  local_run_drgp.sh  me_submission_template.sbatch  polaris.sh  run_drgp.sh
swift_proj/swift/: bebop_module_load.sh  bebop_run_drgp.sh  bebop_run_polaris_sweep.sh  drgp.swift  (+9 more)
taxidemo/: README.md  pyproject.toml
taxidemo/notebooks/: 01_taxi_simulator.ipynb  02_lhs_local.ipynb  03_bo_crossover.ipynb  04_morris_screening.ipynb  05_calibration.ipynb
taxidemo/slides/: README.md  custom.scss  make_figs.py  pug-2026.qmd
taxidemo/src/taxidemo/: __init__.py  metrics.py  plugin.py  runner.py  simulator.py
taxidemo/studies/: bo-crossover.yaml  bo-local.yaml  calibrate-local.yaml  lhs-local.yaml  morris-local.yaml
taxidemo/tests/: test_metrics.py  test_plugin.py  test_simulator.py
test/: settings_test.json  temp.ipynb  test-study  test.py  var_config.json
tests/: conftest.py
(+173 files in other folders)
